force-app/main/default/objects/Account/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>