force-app/main/default/objects/Account/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Guest</label>
    <type>Checkbox</type>
</CustomField>