force-app/main/default/objects/Account/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtuoso</fullName>
            </value>
            <value>
                <fullName>XO</fullName>
            </value>
            <value>
                <fullName>Serandipians / Traveller Made</fullName>
            </value>
            <value>
                <fullName>Connections Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>