force-app/main/default/objects/Account/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>