force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>