force-app/main/default/objects/Account/fields/Supplier_Comission__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Comission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Supplier Comission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>